2014- Konstas Marmatakis marmako@gmail.com

	* tkbackup.py: 
		Added message on loading project. 
		Added message on saving project.
		Minor bug fixes.
	* copymo.py: Added.

2014-04-30 Konstas Marmatakis marmako@gmail.com

	* setup.py: Improvements.
	* tkbackup.py: Bug fixing with opening project files, Gui.
	* Windows installer: 

2014-04-29 Konstas Marmatakis marmako@gmail.com
	
	* setup.py: Improvements.
	* cr_shortcut.py: Finished.
	* Windows installer: Ready.

2014-04-28 Konstas Marmatakis marmako@gmail.com

	* tkbackup.py: Added the ability to create project file.
	* tkbackup.py: Improvements.